--- a/camel-core/pom.xml
+++ b/camel-core/pom.xml
@@ -34,6 +34,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-velocity</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
