--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
-# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+# Avoid ignoring Maven wrapper jar file (.jar components.files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -22,7 +22,10 @@ buildNumber.properties
 .idea/**/dictionaries
 .idea/**/shelf
 
-# Sensitive or high-churn files
+# iml
+*.iml
+
+# Sensitive or high-churn components.files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.local.xml
