--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,15 @@
 
     <modules>
         <module>camel-core</module>
+        <module>camel-components</module>
     </modules>
 
     <properties>
         <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
-        <camel.version>2.22.0</camel.version>
+        <camel.version>2.22.1</camel.version>
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <lombok.version>1.18.0</lombok.version>
+        <log4j-slf4j.version>1.7.25</log4j-slf4j.version>
     </properties>
 
     <parent>
@@ -59,6 +61,18 @@
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-velocity</artifactId>
                 <version>${camel.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-stream -->
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-stream</artifactId>
+                <version>${camel.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${log4j-slf4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
