--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>${log4j-slf4j.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-mina2 -->
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-netty4-http</artifactId>
+                <version>${camel.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
