--- a/camel-core/pom.xml
+++ b/camel-core/pom.xml
@@ -33,6 +33,10 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-velocity</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-hawtdb</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
