--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </modules>
 
     <properties>
-        <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
+        <spring-boot.version>5.0.3.RELEASE</spring-boot.version>
         <camel.version>2.22.1</camel.version>
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <lombok.version>1.18.0</lombok.version>
@@ -78,6 +78,12 @@
             <dependency>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-netty4-http</artifactId>
+                <version>${camel.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-hawtdb -->
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-hawtdb</artifactId>
                 <version>${camel.version}</version>
             </dependency>
         </dependencies>
