--- a/camel-core/pom.xml
+++ b/camel-core/pom.xml
@@ -37,6 +37,18 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-hawtdb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jms</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-camel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-broker</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
